crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__arguments__double_starred.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/arguments/double_starred.py
---
## AST

```
Module(
    ModModule {
        range: 0..55,
        body: [
            Expr(
                ExprStmt {
                    range: 0..15,
                    value: Call(
                        CallExpr {
                            range: 0..15,
                            func: Name(
                                NameExpr {
                                    range: 0..4,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..15,
                                args: [],
                                keywords: [
                                    Keyword {
                                        range: 5..14,
                                        arg: None,
                                        value: Yield(
                                            YieldExpr {
                                                range: 7..14,
                                                value: Some(
                                                    Name(
                                                        NameExpr {
                                                            range: 13..14,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 16..27,
                    value: Call(
                        CallExpr {
                            range: 16..27,
                            func: Name(
                                NameExpr {
                                    range: 16..20,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 20..27,
                                args: [],
                                keywords: [
                                    Keyword {
                                        range: 21..26,
                                        arg: None,
                                        value: Starred(
                                            StarredExpr {
                                                range: 24..26,
                                                value: Name(
                                                    NameExpr {
                                                        range: 25..26,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 28..38,
                    value: Call(
                        CallExpr {
                            range: 28..38,
                            func: Name(
                                NameExpr {
                                    range: 28..32,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 32..38,
                                args: [],
                                keywords: [
                                    Keyword {
                                        range: 33..37,
                                        arg: None,
                                        value: Starred(
                                            StarredExpr {
                                                range: 35..37,
                                                value: Name(
                                                    NameExpr {
                                                        range: 36..37,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 40..54,
                    value: Call(
                        CallExpr {
                            range: 40..54,
                            func: Name(
                                NameExpr {
                                    range: 40..44,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 44..54,
                                args: [
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 52..53,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                ],
                                keywords: [
                                    Keyword {
                                        range: 45..48,
                                        arg: None,
                                        value: Name(
                                            NameExpr {
                                                range: 47..48,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | call(**yield x)
  |        ^^^^^^^ Syntax Error: Yield expression cannot be used here
2 | call(** *x)
3 | call(***x)
  |


  |
1 | call(**yield x)
2 | call(** *x)
  |         ^^ Syntax Error: Starred expression cannot be used here
3 | call(***x)
  |


  |
1 | call(**yield x)
2 | call(** *x)
3 | call(***x)
  |        ^^ Syntax Error: Starred expression cannot be used here
4 | 
5 | call(**x := 1)
  |


  |
3 | call(***x)
4 | 
5 | call(**x := 1)
  |          ^^ Syntax Error: Expected ',', found ':='
  |


  |
3 | call(***x)
4 | 
5 | call(**x := 1)
  |             ^ Syntax Error: Positional argument cannot follow keyword argument unpacking
  |
